--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "directus-tennis-front",
   "version": "0.1.0",
@@ -13,5 +12,10 @@
     "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.2",
+    "postcss": "^8.4.21",
+    "autoprefixer": "^10.4.14"
   }
 }
