--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+    "swr": "^2.2.0"
   },
   "devDependencies": {
     "tailwindcss": "^3.3.2",
